--- a/tos-web/src/app/shell/header/header.component.html
+++ b/tos-web/src/app/shell/header/header.component.html
@@ -64,7 +64,7 @@
                [ngClass]="{ 'active': TOSRegionService.get() == region }"
                (click)="regionSelect(region)">
               {{ region }}&nbsp;
-              <span class="badge badge-success" *ngIf="TOSRegionService.isRebuild(region)">Re:Build</span>
+              {% comment %} <span class="badge badge-success" *ngIf="TOSRegionService.isRebuild(region)">Re:Build</span> {% endcomment %}
             </a>
           </div>
         </a>
@@ -83,7 +83,7 @@
 </nav>
 
 <!-- Patreon -->
-<div class="d-flex text-left pl-4 pr-4 pt-1 pb-1 mb-0 w-100" style="background: #f96854" *ngIf="patrons">
+{% comment %} <div class="d-flex text-left pl-4 pr-4 pt-1 pb-1 mb-0 w-100" style="background: #f96854" *ngIf="patrons">
   <a class="flex-grow-1 text-white" [routerLink]="routerLink('patreon')">
     <span>Thanks &nbsp;</span>
     <span *ngFor="let patron of patrons; index as i"><b>{{ patron }}</b><span *ngIf="i < patrons.length - 1">,</span>&nbsp;</span>
@@ -93,7 +93,7 @@
     <span class="d-none d-sm-inline pl-1">Dismiss</span>&nbsp;
     <fa-icon class="pl-3" [icon]="faTimes"></fa-icon>
   </div>
-</div>
+</div> {% endcomment %}
 
 <!-- Update status -->
 <div class="text-center text-white text-sm-left pl-4 pr-4 pt-1 pb-1 mb-0 w-100 bg-secondary" *ngIf="isUpdateCheck && isUpdateCheckManual && !isUpdateAvailable">
