無関係な項目を削除

--- a/tos-web/src/app/shell/footer/footer.component.html
+++ b/tos-web/src/app/shell/footer/footer.component.html
@@ -10,7 +10,7 @@
        (click)="onClearCacheClick($event)">
       <div class="align-self-center flex-grow-1 text-muted">{{ updateVersion }}</div>
     </a>
-    <div class="col-6 col-lg-3 order-1 text-right order-lg-2 mb-3 mb-lg-0">
+    {% comment %} <div class="col-6 col-lg-3 order-1 text-right order-lg-2 mb-3 mb-lg-0">
       <a href="https://discord.gg/8g76NAA" target="_blank" ngbTooltip="Thanks @Crevox, @Jiyuu, @KriLanze, @Palemoon, @Tekguel and more!">
         <img class="align-self-center mr-2" height="32" src="assets/images/logo_discord.png" />
       </a>
@@ -23,6 +23,6 @@
       <a href="https://www.twitch.tv/rjgtav" target="_blank" ngbTooltip="Follow the development" container="body">
         <img class="align-self-center mr-2" height="32" src="assets/images/logo_twitch.png" />
       </a>
-    </div>
+    </div> {% endcomment %}
   </div>
 </div>
