--- a/tos-web/src/app/shell/loading/loading.component.html
+++ b/tos-web/src/app/shell/loading/loading.component.html
@@ -23,7 +23,7 @@
     </div>
     <div *ngIf="!installSupported">
       <img class="mb-4 mb-sm-5" src="assets/images/emoticons/emoticon_0003.png" />
-      <div>It seems your browser doesn't support tos.guru</div>
+      <div>It seems your browser doesn't support handtos.mochisuke.jp</div>
       <hr class="border-white mt-4 mt-sm-5" />
       <div class="text-left">
         <b>Troubleshooting:</b>
@@ -58,7 +58,7 @@
       <hr class="border-white" />
     </div>
 
-    <div class="d-flex justify-content-around font-weight-bold text-center text-white mt-4 mt-sm-5">
+    {% comment %} <div class="d-flex justify-content-around font-weight-bold text-center text-white mt-4 mt-sm-5">
       <a href="https://discord.gg/8g76NAA" target="_blank" class="d-flex flex-column">
         <img class="align-self-center" src="assets/images/logo_discord.png" />
         <span class="mt-1">Discord</span>
@@ -75,7 +75,7 @@
         <img class="align-self-center" src="assets/images/logo_twitch.png" />
         <span class="mt-1">Twitch</span>
       </a>
-    </div>
+    </div> {% endcomment %}
 
     <div class="position-absolute mt-4 mt-sm-5 text-center w-100" *ngIf="isClearCacheAvailable">
       <div>Installation stuck?</div>
