--- a/tos-web/src/app/home/welcome/welcome.component.html
+++ b/tos-web/src/app/home/welcome/welcome.component.html
@@ -27,6 +27,7 @@
       <b>問題がありましたら<a href="https://www.twitter.com/ebisuke">ebisuke</a>までご連絡ください。</b><br/>
       <b>※tos.guruのクローンサイトとなりますため tos.guruを運営されておりますrjgtav様への直接のご質問はご遠慮ください。</b>
     </p>
+    <p><u>If you have a LanguageData folder for kTOS or twTOS, please provide it to me and I would appreciate it.</u></p>
   </div>
 
   <div class="col-lg-6">
