--- a/tos-web/src/app/home/welcome/welcome.component.html
+++ b/tos-web/src/app/home/welcome/welcome.component.html
@@ -35,12 +35,26 @@
       <div class="card-header">
         Changelog
       </div>
+      <!--  badge-info  badge-warning badge-success badge-danger -->
       <div class="card-body" style="max-height: calc(100vh - 16rem); overflow-y: auto">
-
-        <h6>2021/06/**</h6>
+        <h6>2021/06/23</h6>
         <ul>
-          <li><span class="badge badge-info">試験</span> テスト公開</li>
+          <li><span class="badge badge-success">追加</span>複数言語のサポート（ただしITOSは英語以外不完全です） </li>
+          <li><span class="badge badge-success">追加</span>バフ・デバフの追加 </li>
+          <li><span class="badge badge-info">削除</span>スタンドアロンで動作する機能を削除 </li>
+          <li><span class="badge badge-info">変更</span>SkillFactor等各種値をサーバサイドで計算するよう変更 </li>
+          <li><span class="badge badge-info">変更</span>検索を部分一致に変更 </li>
+          <li><span class="badge badge-warning">修正</span>特性が表示されない問題を修正 </li>
+          <li><span class="badge badge-warning">修正</span>モンスターのパラメータが正しくないのを修正 </li>
+          <li><span class="badge badge-bug">不具合</span>マップのデータがない（修正には時間がかかる見込みです） </li>
+          <li><span class="badge badge-bug">不具合</span>アイコンが不足している </li>
+          <li><span class="badge badge-bug">不具合</span>アイテムにリンクするコレクション・ドロップが表示されていない（ドロップについては表示できるかの見込みは不明です） </li>
+          <li><span class="badge badge-bug">不具合</span>モンスターにリンクするマップ・ドロップが表示されていない（ドロップについては表示できるかの見込みは不明です） </li>
+          <li><span class="badge badge-bug">不具合</span>なんかいろいろ </li>
+          <li><span class="badge badge-bug">未実装</span>ゴッデスジェム・ゴッデス等級装備・女神カードが表示されない </li>
+          
         </ul>
+
 
         
       </div>
