--- a/tos-web/src/app/shared/components/entity-detail/entity-detail-Information/entity-detail-Information.component.html
+++ b/tos-web/src/app/shared/components/entity-detail/entity-detail-Information/entity-detail-Information.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="attribute || item || job || monster || skill || monster_skill">
+<div *ngIf="attribute || item || job || monster || skill ">
   <div class="w-100" *ngIf="divider"><hr></div>
   <h5 *ngIf="header">Information</h5>
 
@@ -101,6 +101,4 @@
   </div>
 
 
-  <tos-entity-detail-MonsterSkill *ngIf="monster_skill">
-  </tos-entity-detail-MonsterSkill>
 </div>
