--- a/tos-web/src/app/shared/components/entity-detail/entity-detail-MonsterSkill/entity-detail-MonsterSkill.component.html
+++ b/tos-web/src/app/shared/components/entity-detail/entity-detail-MonsterSkill/entity-detail-MonsterSkill.component.html
@@ -1,16 +1,16 @@
 <div>
   <div class="w-100" *ngIf="divider"><hr></div>
-  <h5 *ngIf="header">Monster Skills</h5>
+  <h5 *ngIf="header">Skill Information</h5>
    
-  <p class="text-multiline mb-0" [innerHTML]="((entity['Description'] || '') + (entity['DescriptionRequired'] || '')) | sanitizeHTML"></p>
-  <div class="row mt-1" *ngIf="item">
+  <p class="text-multiline mb-0" [innerHTML]="((entity['Description'] || '') + (entity['DescriptionRequired'] || '')) | colorizeHTML | sanitizeHTML"></p>
+  <div class="row mt-1" >
     <div class="col">
       <div class="row text-center">
         <div class="col">
         <table class="table table-borderless table-sm">
             <thead>
             <tr class="table-primary">
-            <th scope="col">Attack Type</th>
+
             <th scope="col">AOE</th>
             <th scope="col">CoolDown</th>
             <th scope="col">SkillFactor</th>
@@ -18,13 +18,12 @@
             </thead>
             <tbody>
             <tr>
-            <td>{{ monster_skill.Description | string }}</td>
-            <td>{{ monster_skill.SR | number }}</td>
-            <td>{{ monster_skill.CoolDown | number }}sec</td>
+            <td>{{ monster_skill.SkillSR | number }}</td>
+            <td>{{ monster_skill.CoolDown/1000.0 | number }}sec</td>
             <td>{{ monster_skill.SkillFactor | number }}%</td>
             </tr>
             </tbody>
-        </table>
+          </table>
         </div>
       </div>
     </div>
