fix marketprice anchor

--- a/tos-web/src/app/shared/components/entity-detail/entity-detail-MarketPrice/entity-detail-MarketPrice.component.html
+++ b/tos-web/src/app/shared/components/entity-detail/entity-detail-MarketPrice/entity-detail-MarketPrice.component.html
@@ -16,8 +16,8 @@
             <tbody>
             <tr>
             
-            <td><a [href]="'https://tosmarket.mochisuke.jp/?s=1007&amp;c=' + entity.$ID " >{{ server1007 }}</a></td>
-            <td><a [href]="'https://tosmarket.mochisuke.jp/?s=1008&amp;c=' + entity.$ID " >{{ server1008 }}</a></td>
+            <td><a [href]="'https://tosmarket.mochisuke.jp/byclsid/?s=1007&amp;c=' + entity.$ID " >{{ server1007 }}</a></td>
+            <td><a [href]="'https://tosmarket.mochisuke.jp/byclsid/?s=1008&amp;c=' + entity.$ID " >{{ server1008 }}</a></td>
            
             </tr>
             </tbody>
