remove sw update

--- a/tos-web/src/app/shell/header/header.component.html
+++ b/tos-web/src/app/shell/header/header.component.html
@@ -88,7 +88,7 @@
 
 
 <!-- Update status -->
-<div class="text-center text-white text-sm-left pl-4 pr-4 pt-1 pb-1 mb-0 w-100 bg-secondary" *ngIf="isUpdateCheck && isUpdateCheckManual && !isUpdateAvailable">
+<!--<div class="text-center text-white text-sm-left pl-4 pr-4 pt-1 pb-1 mb-0 w-100 bg-secondary" *ngIf="isUpdateCheck && isUpdateCheckManual && !isUpdateAvailable">
   Checking for updates...
 </div>
 <div class="text-center text-white text-sm-left pl-4 pr-4 pt-1 pb-1 mb-0 w-100 bg-info" *ngIf="isUpdateInstall">
@@ -97,5 +97,5 @@
 <a class="text-center text-white text-sm-left pl-4 pr-4 pt-1 pb-1 mb-0 w-100 bg-info d-block" *ngIf="isUpdateAvailable && !isUpdateInstall"
    href="#update" (click)="updateInstall($event)">
   A new update is available. Click to install
-</a>
+</a>-->
 
