fix level limit

--- a/tos-web/src/app/shared/components/entity-detail/entity-detail-Skill/entity-detail-Skill.component.html
+++ b/tos-web/src/app/shared/components/entity-detail/entity-detail-Skill/entity-detail-Skill.component.html
@@ -11,7 +11,7 @@
   <tos-input-number class="h5 text-center mt-3 mb-3" *ngIf="input && build"
                     [label]="'Level'"
                     [labelMax]="build.skillLevelMax$(skill) | async"
-                    [min]="0" [max]="(build.skillLevelMax$(skill) | async) "
+                    [min]="0" [max]="(build.skillLevelMax$(skill) + 5 | async) "
                     [model]="skillLevel"
                     (modelChange)="onSkillLevelIncrement($event)"></tos-input-number>
 
