--- a/tos-web/src/app/shared/components/entity-detail/entity-detail-Skill/entity-detail-Skill.component.html
+++ b/tos-web/src/app/shared/components/entity-detail/entity-detail-Skill/entity-detail-Skill.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="build && skill || skill">
+<div *ngIf="build && skill ">
   <div class="w-100" *ngIf="divider"><hr></div>
 
   <tos-input-number class="h5 text-center mt-3 mb-3" *ngIf="input && !build"
