--- a/tos-web/src/app/shell/header/header.component.html
+++ b/tos-web/src/app/shell/header/header.component.html
@@ -74,9 +74,9 @@
         </a>
       </li>
       <!-- Check for updates (manually) -->
-      <a class="nav-item nav-link ml-1 mr-1" (click)="updateCheck(true)" ngbTooltip="Check for updates" placement="bottom">
+      <!-- <a class="nav-item nav-link ml-1 mr-1" (click)="updateCheck(true)" ngbTooltip="Check for updates" placement="bottom">
         <fa-icon [icon]="faSync"></fa-icon>
-      </a>
+      </a> -->
       <!-- Theme selector -->
       <a class="nav-item nav-link ml-1 mr-1" (click)="theme.toggle()" [ngbTooltip]="(theme.is(Theme.LIGHT) ? 'Dark' : 'Light') + ' Theme'" placement="bottom">
         <fa-icon [icon]="theme.is(Theme.LIGHT) ? faMoon : faSun"></fa-icon>
