--- a/tos-web/src/app/skill-simulator/skill-builder/skill-builder.component.html
+++ b/tos-web/src/app/skill-simulator/skill-builder/skill-builder.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-between justify-content-sm-end ml-0 mr-0 mb-3">
-  <button type="button" class="btn d-none d-sm-inline-block mr-3"
+  <!-- <button type="button" class="btn d-none d-sm-inline-block mr-3"
           [ngClass]="{
             'btn-primary': !sharingAsImage,
             'btn-warning': sharingAsImage
@@ -20,7 +20,7 @@
           (click)="shareAsUrl()">
     <fa-icon class="mr-1" [icon]="faLink"></fa-icon>
     <span>{{ sharingAsUrl ? 'Generating URL...' : tinyUrl ? 'Copy URL' : 'Share as URL'}}</span>
-  </button>
+  </button>-->
 </div>
 
 <!-- Select Stats -->
