Support Ether Gem

--- a/tos-web/src/app/home/welcome/welcome.component.html
+++ b/tos-web/src/app/home/welcome/welcome.component.html
@@ -37,6 +37,11 @@
       </div>
       <!--  badge-info  badge-warning badge-success badge-danger -->
       <div class="card-body" style="max-height: calc(100vh - 16rem); overflow-y: auto">
+        <h6>2021/07/03</h6>
+        <ul>
+          <li><span class="badge badge-success">追加</span>ゴッデス等級装備の強化に必要な材料数の計算に対応 </li>
+          <li><span class="badge badge-success">追加</span>エーテルジェム・レリックジェムのProp表示に対応 </li>
+        </ul>
         <h6>2021/07/01</h6>
         <ul>
           <li><span class="badge badge-success">追加</span>モンスタースキルを追加 </li>
