--- a/tos-web/src/app/shared/components/entity-detail/entity-detail-OptDesc/entity-detail-OptDesc.component.html
+++ b/tos-web/src/app/shared/components/entity-detail/entity-detail-OptDesc/entity-detail-OptDesc.component.html
@@ -2,5 +2,5 @@
   <div class="w-100" *ngIf="divider"><hr></div>
   <h5 *ngIf="header">Optional</h5>
 
-  <p class="text-multiline mb-0" [innerHTML]="((entity['OptDesc'] || entity['OptDescHTML'] || '') + (entity['OptDescRequired'] || '')) | sanitizeHTML"></p>
+  <p class="text-multiline mb-0" [innerHTML]="((entity['OptDesc'] || '') + (entity['OptDescRequired'] || '')) | sanitizeHTML"></p>
 </div>
